Fixed weird horizontal scrollbar on home page search box

--- a/_sass/theme/common.scss
+++ b/_sass/theme/common.scss
@@ -287,7 +287,7 @@
         max-height: 230px;
         background-color: #fff;
         border-radius: 0 0 4px 4px;
-        overflow: scroll;
+        overflow: auto;
         z-index: 0;
     }
     .search_item {
